Fixes sticky thumbnails not overriding link thumbnails Fixes link flair being too default in selection box Fixes spoiler thumbnail wrapping when too wide Maybe new mod-only link flair Fixes tab bar on mod-only pages Increases height of header and changes body bg for new header image

--- a/content.less
+++ b/content.less
@@ -15,6 +15,10 @@ body > .content {
 
 // Links
 
+.link.last-clicked {
+	border: none;
+}
+
 .thing.link {
 	margin-bottom: @content-padding !important;
 	padding: 0 0 @content-padding 0 !important;
@@ -81,7 +85,13 @@ body > .content {
 		}
 		
 		.thumbnail {
+			height: 50px;
+			
 			background-image: url(%%sticky-thumbnail%%);
+			
+			img {
+				display: none;
+			}
 		}
 		
 		p.title {
