--- a/header.less
+++ b/header.less
@@ -174,11 +174,11 @@
 	box-shadow: 0 -2px 3px 0px @content-shadow-color;
 	
     // Special case for some mod pages: contained within content body
-    .content & {
-        width: calc(~'100% - -@{side-width}');
-        top: -@tabs-height;
-        left: -@content-padding;
-    }
+    //.content & {
+    //    width: calc(~'100% - -@{side-width}');
+    //    top: -@tabs-height;
+    //    left: -@content-padding;
+    //}
     
     // Special case for submit page: contained within form#newlink
     form &.formtab {
